echo_ingress.yaml
#comment for clarity
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: openfaas
  annotations:  #line to be commented for starting tutorial
    kubernetes.io/ingress.class: "nginx"  #line to be commented for starting tutorial
    cert-manager.io/cluster-issuer: "letsencrypt-prod" #line to be commented for starting tutorial or updated using prod
spec:
  tls:  #line to be commented for starting tutorial
  - hosts:  #line to be commented for starting tutorial
    - echo1.pgr095.tk #line to be commented for starting tutorial
    secretName: echo-tls  #line to be commented for starting tutorial
  rules:
  - host: echo1.pgr095.tk
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
#comment for clarity
