openfaas_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: openfaas-ingress
  namespace: openfaas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - openfaas.pgr095.tk
    secretName: openfaas-tls
  rules:
  - host: openfaas.pgr095.tk
    http:
      paths:
      - backend:
          serviceName: gateway
          servicePort: 8080
